cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
add_executable( Robertson_HDR Robertson_HDR.cpp )
add_executable( Debevec_HDR Debevec_HDR.cpp )
add_executable( MTB MTB.cpp )
target_link_libraries( MTB ${OpenCV_LIBS} )
target_link_libraries( Debevec_HDR ${OpenCV_LIBS} )
target_link_libraries( Robertson_HDR ${OpenCV_LIBS} )
